--- a/src/stylesheets/main.sass
+++ b/src/stylesheets/main.sass
@@ -22,35 +22,55 @@ a
 #root
   background-color: $bg1
 
-.headroom-wrapper
-  margin: 0 15px
+.title-header .navbar-brand
+  @include longshadow(rgba(darken($bg2, 15%), .05), 10)
 
-.headroom
-  @include bendedShadow()
-  & .row
-    background-color: $bg2
-    position: relative
-  h1
-    @include longshadow(rgba(darken($bg2, 15%), .05), 70)
+.headroom--pinned
+  z-index: 1000 !important
 
-.nav-bar
+.navbar
+  margin-bottom: 0
+  z-index: 1000 !important
+  position: relative
+  .container
+    justify-content: space-between
+
+.navbar-brand
+  padding: 15px
+  font-size: 18px
+  line-height: 20px
+  height: 50px
+
+.nav.navbar-nav
   display: flex
   flex-flow: row wrap
-  margin: 0 1em
-  .headroom--pinned &
-    margin: 0 2em
-  .menu-item
+  & > li
     flex-grow: 1
-    text-align: center
-    border-radius: 3px
-    padding: .5em
-    margin: .1em
-    &:hover, &:active, &:focus, &.active
-      text-decoration: none
-      outline: none
+    margin: 0 .5em
+    .menu-item
+      padding: 0.5rem 1rem
+      text-align: center
+      z-index: 10
+      &:hover, &:active, &:focus, &.active
+        background-color: #117298
+        text-decoration: none
+        outline: none
 
-#viewport
+.viewport
+  position: relative
   background-color: $bg2
   box-shadow: 0 0 2em #000
-  margin: 0
+  z-index: 1
+  padding-bottom: 4em
 
+.list-group-item-text
+  overflow: hidden
+
+.footer
+  position: relative
+  z-index: 0
+  background-color: $bg1
+  color: $fg2
+  a
+    color: inherit
+    font-weight: bold
