feat(PersonalProjects): add the page.

--- a/src/stylesheets/main.sass
+++ b/src/stylesheets/main.sass
@@ -56,6 +56,16 @@ a
         text-decoration: none
         outline: none
 
+.nav-tabs a
+  &:hover, &:active, &:focus, &.active
+    text-decoration: none
+    outline: none
+
+.personal-project-repo-dl dt
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
 .viewport
   position: relative
   background-color: $bg2
